examples/test/testpolicy4998.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4998
  namespace: namespace171
spec:
  podSelector:
    matchLabels:
      key34: value34
      key16: value42
      key37: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value25
          key29: value46
          key14: value22
